--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "Testing rollup",
   "main": "index.mjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "npx eslint"
   },
   "author": "Paul Min",
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@octokit/rest": "^21.0.2"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.10.0",
+    "eslint": "^9.10.0",
+    "globals": "^15.9.0"
   }
 }
