ci: report node version

--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -19,6 +19,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Report node version
+        run: node --version
+
       - name: Checkout
         uses: actions/checkout@v4
 
